Fixed errors, added second request to main window, completed fourth lab
