# Library/Library.Client/swagger.json
@@ -837,17 +837,26 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/BookGetDto"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BookGetDto"
+                  }
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BookGetDto"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BookGetDto"
+                  }
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BookGetDto"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BookGetDto"
+                  }
                 }
               }
             }
@@ -1385,7 +1394,8 @@
           "registrationDate": {
             "type": "string",
             "description": "RegistrationDate stores reader's registration date",
-            "format": "date-time"
+            "format": "date-time",
+            "nullable": true
           }
         },
         "additionalProperties": false,
@@ -1412,7 +1422,8 @@
           "registrationDate": {
             "type": "string",
             "description": "RegistrationDate stores reader's registration date",
-            "format": "date-time"
+            "format": "date-time",
+            "nullable": true
           }
         },
         "additionalProperties": false,
