# Library/Library.Server/Controllers/RequestController.cs
@@ -72,7 +72,16 @@ public class RequestController : ControllerBase
                                 }).ToListAsync();
         var request = (from req in bookSelect
                        orderby req.book.Name
-                       select req).ToList();
+                       select req).Select(b => new BookGetDto
+                       {
+                           Id = b.book.Id,
+                           Author = b.book.Author,
+                           Cipher = b.book.Cipher,
+                           Name = b.book.Name,
+                           PlaceEdition = b.book.PlaceEdition,
+                           YearEdition = b.book.YearEdition,
+                           TypeEditionId = b.book.TypeEditionId,
+                       }).ToList();
         if (request.Count == 0)
         {
             _logger.LogInformation("Not found books");
